# ir_rec

./: CMakeLists.txt  main.c
scripts/: connect.py  make_sweep.py
